modules/ecs/security-groups.tf
resource "aws_security_group" "sg" {
    name = "ecs_sg"
    description = "ECS security group"
    vpc_id = var.vpc_id

   ingress {
       from_port = 22
       to_port = 22
       protocol = "tcp"
       cidr_blocks = [
          "0.0.0.0/0"]
   }

   ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = [
          "0.0.0.0/0"]
   }
}
